<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDVDShelf</string>
    <string name="action_settings">Paramètres</string>
    <string name="add_dvd">Ajouter un DVD</string>
    <string name="menu_liste">Tous les DVD</string>
    <string name="menu_add_dvd">Ajouter un DVD</string>
    <string name="title">Titre :</string>
    <string name="date">Date :</string>
    <string name="genre">Genre :</string>
    <string name="prod">Prod. :</string>
    <string name="synopsys">Synopsys (ENG)</string>
    <string name="longtest">Thomas A. Anderson is a man living two lives. By day he is an average computer programmer and by night a hacker known as Neo. Neo has always questioned his reality, but the truth is far beyond his imagination. Neo finds himself targeted by the police when he is contacted by Morpheus, a legendary computer hacker branded a terrorist by the government. Morpheus awakens Neo to the real world, a ravaged wasteland where most of humanity have been captured by a race of machines that live off of the humans\' body heat and electrochemical energy and who imprison their minds within an artificial reality known as the Matrix. As a rebel against the machines, Neo must return to the Matrix and confront the agents: super-powerful computer programs devoted to snuffing out Neo and the entire human rebellion.</string>
    <string name="no_answer">...</string>
</resources>
