<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="153dp"
            android:id="@+id/film_imageView"
            android:background="@color/lightgrey"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="@dimen/classic_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="@dimen/classic_margin">

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="@dimen/text_big"/>

                <TextView
                    android:id="@+id/film_titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="@dimen/classic_margin"
                    android:textSize="@dimen/text_big"/>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/text_big"/>

                <TextView
                    android:id="@+id/film_dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="@dimen/classic_margin"
                    android:textSize="@dimen/text_big"/>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="@dimen/text_big"/>

                <TextView
                    android:id="@+id/film_genreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="@dimen/classic_margin"
                    android:textSize="@dimen/text_big"/>

            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_margin"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prod"
                    android:textSize="@dimen/text_big"/>

                <TextView
                    android:id="@+id/film_prodTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginLeft="@dimen/classic_margin"
                    android:textSize="@dimen/text_big"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsys"
                android:textSize="@dimen/text_big"
                android:gravity="center"
                android:layout_marginBottom="@dimen/classic_margin"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/film_synopsysTextView"
                    android:text=""
                    android:textSize="@dimen/text_big"/>

            </ScrollView>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>